--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -3,9 +3,9 @@
 <div class = "screen">
     <div class = "container">
         <div class = "row" id = "user">
-            <div class = "col-10" id = "username"><h1>USERNAME</h1></div>
+            <div class = "col-10" id = "username"><h1>{{ user.username }}</h1></div>
             <div class = "col-2" id = "logout">
-                <button type = "button" class = "logout btn" routerLink = "/"><strong>LOGOUT</strong></button>        
+                <button type = "button" class = "logout btn" (click) = "logout()"><strong>LOGOUT</strong></button>        
             </div>
         </div>
         <hr class = "mt-1">
@@ -14,11 +14,11 @@
                 <img src = "../../assets/img/user.png" class = "img-thumbnail position-absolute top-50 start-50 translate-middle">
             </div>
             <div class = "col position-relative" id = "user-details">
-                <table class = "ms-4 position-absolute top-50 start-0 translate-middle-y">
-                    <tr><th>ID</th><td>012345679</td></tr>
-                    <tr><th>Email</th><td>abcabc@example.com</td></tr>
-                    <tr><th>Role</th><td>Super Admin</td></tr> <!-- If Super/Group/Admin/Assis-->
-                    <tr><th>Last active</th><td>02 Aug 2022</td></tr>
+                <table class = "table-responsive-lg ms-4 position-absolute top-50 start-0 translate-middle-y">
+                    <tr><th>ID</th><td>{{ user.id }}</td></tr>
+                    <tr><th>Email</th><td>{{ user.email }}</td></tr>
+                    <tr *ngIf = "user.role == 'Super Admin'"><th>Role</th><td>{{ user.role }}</td></tr> <!-- If Super/Group/Admin/Assis-->
+                    <tr><th>Last active</th><td>{{ user.lastActive }}</td></tr>
                 </table>
             </div>   
         </div>
@@ -28,50 +28,20 @@
         <div class = "row mx-auto" id = "groups">
             <div class = "row m-0 px-0 pb-1">
                 <div class = "col p-0"><h2>Group (5)</h2></div>
-                <div class = "col text-end p-0">
-                    <button type = "button" class = "btn btn-primary py-1">Create Group</button>
+                <div *ngIf = "user.role == 'Super Admin' || user.role == 'Group Admin'" class = "col text-end p-0">
+                    <button type = "button" class = "btn btn-primary py-1" (click) = "openModal('newGroup')">Create Group</button>
                 </div>
             </div>
             <div class = "container bg-transparent text-center p-0 m-auto w-100">
                 <div class = "row row-cols-3 row-cols-lg-6 p-0 m-0">
-                    <div class = "dropdown col-lg" id = "group">
-                        <h5>Group1</h5>
+                    <div *ngFor = "let group of groups" class = "dropdown col-lg" id = "group" (click) = "openModal('details', group.id)">
+                        <h5>{{ group.name }}</h5>
                         <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
                         <div class = "dropdown-content">
-                            <a class = "dropdown-item">Channel A</a>
-                            <a class = "dropdown-item">Channel B</a>
-                            <a class = "dropdown-item">Channel C</a>
+                            <div *ngFor = "let channel of channels">
+                                <a *ngIf = "channel.groupID == group.id" class = "dropdown-item" (click) = "joinChannel(group.id, channel.id)">{{ channel.name }}</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class = "dropdown col-lg">
-                        <h5>Group2</h5>
-                        <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
-                        <div class = "dropdown-content">
-                            <a class = "dropdown-item">Channel A</a>
-                            <a class = "dropdown-item">Channel B</a>
-                            <a class = "dropdown-item">Channel C</a>
-                            <a class = "dropdown-item" (click) = "groupDetailsModal()">More...</a>
-                        </div>
-                    </div>
-                    <div class = "dropdown col-lg">
-                        <h5>Group3</h5>
-                        <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
-                    </div>
-                    <div class = "dropdown col-lg">
-                        <h5>Group3</h5>
-                        <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
-                    </div>
-                    <div class = "dropdown col-lg">
-                        <h5>Group3</h5>
-                        <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
-                    </div>
-                    <div class = "dropdown col-lg">
-                        <h5>Group3</h5>
-                        <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
-                    </div>
-                    <div class = "dropdown col-lg">
-                        <h5>Group3</h5>
-                        <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
                     </div>
                 </div>
 
